tests/fail/05_wrong_arg_type.lang
функция печать_числа(целое а) : пусто {
    печать а;
}

функция main() : целое {
    печать_числа(3.14); // Ошибка семантики: Несоответствие типа аргумента (вещ вместо целое)
    вернуть 0;
}
